# carbook

./: .gitignore  README.md  pubspec.yaml
.github/workflows/: ci.yml  deploy-stack.yaml  release.yml  sync-env.yaml
android/app/: build.gradle.kts
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  database.py  guardrails.py  main.py  models.py  openai_client.py  schemas.py  services.py
backend/tests/: test_api.py
fastlane/: Fastfile
infrastructure/: Makefile  docker-compose.app.yml  docker-compose.network-local.yml  docker-compose.network-prod.yml  services.json
integration_test/: epic_four_smoke_test.dart  epic_two_smoke_test.dart
ios/Runner.xcodeproj/: project.pbxproj
landing/: .dockerignore  .gitignore  Dockerfile  app.vue  nuxt.config.ts  package-lock.json  package.json
landing/components/: AppFooter.vue  AppHeader.vue  AppMockup.vue  LegalPage.vue  StoreButtons.vue
landing/locales/: de.ts  en.ts  es.ts  fr.ts  it.ts  pl.ts
landing/pages/: index.vue  privacy.vue  terms.vue
landing/utils/: storeLinks.ts
lib/: main.dart
mobile/: l10n.yaml  pubspec.yaml
mobile/fastlane/: Fastfile
mobile/integration_test/: epic_four_smoke_test.dart  epic_three_smoke_test.dart  epic_two_smoke_test.dart
mobile/ios/: .gitignore
mobile/lib/: main.dart
specs/: EPICS.md
specs/landing_design/: DESIGN.md  code.html
test/data/: drift_car_profile_repository_test.dart  drift_maintenance_repository_test.dart  drift_repair_repository_test.dart
test/services/: rolling_reminder_scheduler_test.dart
test/support/: test_app.dart  (+1 more)
(+155 files in other folders)
